Bug 164902 - FILEOPEN DOCX partially-offscreen shape: wrong part now visible - and logo no longer visible
Summary: FILEOPEN DOCX partially-offscreen shape: wrong part now visible - and logo no...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Objects
  Show dependency treegraph
 
Reported: 2025-01-28 21:09 UTC by Justin L
Modified: 2025-03-19 07:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-de-100780.docx: the example document (67.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-01-28 21:12 UTC, Justin L
Details
forum-mso-de-100780.docx_mso.pdf: how it looks in Word 2019 (40.97 KB, application/pdf)
2025-01-28 21:12 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-01-28 21:09:32 UTC
In an incredibly bizarre design, a couple of shapes along the top and right side border an in-line image (with 4.92 inch indent). In 25.2 (backported to 24.8.0), the display result is a disaster, while prior to that it pretty much matched MSO pixel for pixel.

At the moment, the logo is wrapped below (off screen) the right shape. The right shape does not visually hug the right side any more (because of the not-visible "foot"). The top shape now shows the start of the shape (instead of the end), so the "foot" is now visible.

The change happened with commit a0b6587c4acb1d74e1b00904147821640c98b323
Author: Miklos Vajna on Thu Jun 13 08:04:30 2024 +0200
    tdf#161199 sw DoNotCaptureDrawObjsOnPage: capture wrap=none draw objects

It is worth noting that things look rather different in MS Word 2010. In fact, it looks almost identical to the current LO result - except that the logo is still visible.

Found by Collabora's mso-test
Comment 1 Justin L 2025-01-28 21:12:06 UTC
Created attachment 198817 [details]
forum-mso-de-100780.docx: the example document

Steps to reproduce:
1.) open forum-mso-de-100780.docx

Notice there is no in-line logo in the top, right corner, there is a gap between the right border-shape and the right edge of the paper, and there is a "foot" visible on the top border-shape.
Comment 2 Justin L 2025-01-28 21:12:58 UTC
Created attachment 198818 [details]
forum-mso-de-100780.docx_mso.pdf: how it looks in Word 2019
Comment 3 Justin L 2025-02-22 19:53:32 UTC
confirmed that it still looks broken in master.
Comment 4 Commit Notification 2025-03-18 15:34:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f60266597212b12039b9055de7db1724fd06cd3e

tdf#164902 sw DoNotCaptureDrawObjsOnPage: enable non-textbox wrap=no draw objs

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-03-19 07:48:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/85d41c3a1b1111e8bbe363763ebd892d92c297f9

tdf#164902 sw DoNotCaptureDrawObjsOnPage: enable non-textbox wrap=no draw objs

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.